# rust_numerical_methods

./: Cargo.toml  README.md
src/: bisection.rs  euler.rs  findRoot.rs  find_root_bracketing.rs  find_root_combination.rs  find_root_iterative.rs  main.rs
src/find_roots/: find_root_bracketing.rs  find_root_combination.rs  find_root_iterative.rs  mod.rs
src/sles/: mod.rs
src/sodes/: mod.rs  sode_explicit_methods.rs  sode_implicit_methods.rs  sode_multistep_methods.rs
src/view/: _clear_menu.rs  menu.rs  menu_console.rs  menu_gui.rs  mod.rs
